# nanos-zed

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  extension.toml
.github/workflows/: sync-annotations.yml
snippets/: lua.json
src/: html_to_markdown.rs  nanos_world_lua.rs
