[package]
name = "nanos_world_zed"
version = "0.2.1"
edition = "2021"
publish = false
license = "MIT"

[lib]
path = "src/nanos_world_lua.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
